# Whoopigirlberg2003

./: README.md  boto3.py  server.js  work.py
finance/: package.json
mercados/: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  adapter.py  compose.yaml  requirements-development.txt  requirements.txt  setup.cfg
mercados/docs/: mercados.1  tutorial.md
mercados/exemplos/: README.md  b3_aluguel.py  b3_indice.py  b3_negociacao_balcao.py  b3_negociacao_bolsa.py  bcb_cdi.py  cvm_informe_diario_fundo.py  fnet_b3_cota_etf.py  fnet_informe_diario_fundo.py  ibge_ipca_2025.py  stn_precos_titulos.py
mercados/mercados/: __main__.py  b3.py  bcb.py  choices.py  cvm.py  document.py  fundosnet.py  ibge.py  stn.py  utils.py
mercados/scripts/: cota_fundo.py  lint.sh  smoke-test.sh  update_choices.py
mercados/tests/: test_dataclasses.py  test_fundosnet.py  test_ibge.py  test_informe_diario_fundo.py  test_informe_fii.py  test_informe_rendimentos.py  test_todo.py  test_utils.py
