[metadata]
name = mercados
version = 0.2.0
description = Scrapers para acessar dados do mercado financeiro brasileiro de diversos órgãos (CVM, BCB, B3), como Selic, CDI, IPCA, cadastro de fundos, CRAs, CRIs, debêntures, negociação bolsa e balcão etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PythonicCafe/mercados/
keywords = finance market data CVM BCB B3 FII FI-Infra FI-Agro FIP Selic CDI IPCA IGP-M
author = Álvaro Justen
author_email = alvarojusten@gmail.com
license = LGPL-3.0-or-later
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
include_package_data = true
packages =
    mercados
python_requires = >=3.7
install_requires =
    lxml
    requests
    xmltodict

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
ibge =
    xlrd

[options.entry_points]
console_scripts =
    mercados = mercados.__main__:main

[options.data_files]
share/man/man1 = docs/mercados.1

[flake8]
max-line-length = 120
exclude = .tox,.git,.local,docs,docker/,data/
ignore=I001,I003,I004,E203,E231,E501,W503
